# LaneDetector_PARI2019

./: CMakeLists.txt  README
doc/: Doxyfile.in  mainpage.dox
src/: Project.glade  Project.glade~
src/client/: .myf.cpp.swp  callbacks.c  client.cpp  myclient.h  myf.cpp  prototypes.h
src/server/: auxfuncs.cpp  myserver.h  prototypes.h  server.cpp
srcmyutils/: pcolor.c  prototypes.h
